src/components/TableV2/TableV2.css
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.table {
  height: 100%;

  .header {
    font-weight: bold;
    font-size: 11px;
    color: var(--grey-800);
    display: flex;
    padding: var(--spacing-medium);
    text-transform: uppercase;
  }

  .header.minimal {
    color: var(--grey-600);
    border-bottom: 1px solid var(--grey-100);
  }

  .cell.sortable {
    cursor: pointer;
    display: flex;
    align-items: center;
  }

  .body {
    min-height: calc(100% - 115px);
  }

  .row {
    display: flex;
    padding: var(--spacing-medium);
    background-color: white;
    border: 1px solid transparent;
    position: relative;
    align-items: center;
  }

  .card {
    box-shadow: 0 1px 5px -4px var(--black);
    border-radius: 4px;
    margin-bottom: var(--spacing-small);
  }

  .card.clickable {
    cursor: pointer;
    &:hover {
      box-shadow: 0px 2px 8px -5px var(--black);
      border: 1px solid var(--primary-7);
      background-color: #fcfeff;
    }
  }

  .row.minimal {
    border-bottom: 1px solid var(--grey-100);
    padding: var(--spacing-small) var(--spacing-medium);
  }

  .minimal.clickable {
    cursor: pointer;
    &:hover {
      background-color: var(--primary-1);
    }
  }

  .cell {
    display: inline-block;
    vertical-align: middle;

    overflow: hidden;
    text-overflow: ellipsis;
  }

  [role='columnheader'].resizable {
    margin: 0;
    padding: 0.5rem;
    &:hover {
      border-right: 1px solid var(--grey-200);
    }
    position: relative;

    :last-child {
      border-right: 0;
    }
  }

  .resizer {
    display: inline-block;
    width: 10px;
    height: 100%;
    position: absolute;
    right: 0;
    top: 0;
    transform: translateX(50%);
    z-index: 1;
    touch-action: none;
  }

  .pagination {
    padding: var(--spacing-medium);
  }
}

